# chicken-disease-detection

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  Dockerfile  LICENSE  Makefile  README.md  app.py  dvc.yaml  environment.yaml  params.yaml  repo_template.py  requirements.txt  run_pipeline.py  setup.cfg  template.py
.github/workflows/: CI-CD-AWS.yaml  main_chickendisease.yml
config/: config.yaml
src/chickendisease/: __init__.py
src/chickendisease/components/: base_model.py  callbacks.py  data_ingestion.py  evaluation.py  training.py
src/chickendisease/config/: configuration.py
src/chickendisease/entity/: config_entity.py
src/chickendisease/pipeline/: base_model.py  data_ingestion.py  evaluation.py  predict.py  trainer.py
src/chickendisease/utils/: common.py
templates/: index.html
test/: main.py
