[metadata]
name = chickendisease
version = 0.0.1
author = Zaman Wahid
author_email = zamanwahid16@gmail.com
description = Chicken Disease Detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zamanwahid16/chicken-disease-detection

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src